course 7 wk5 updated

--- a/course7-the-full-stack/wk5/Lab-2-Initial Set up a Little Lemon booking API/restaurant/templates/book.html
+++ b/course7-the-full-stack/wk5/Lab-2-Initial Set up a Little Lemon booking API/restaurant/templates/book.html
@@ -5,7 +5,7 @@
 <section>
   <article>
     <!-- Add your code in the line below  -->
-    <h1> <!--Add title here --> </h1>
+    <h1> Make a reservation </h1>
 
     <!--Begin row-->
     <div class="row">
@@ -39,7 +39,9 @@
 </section>
 <!-- Add your code inside the script tags below  -->
 <script>
-  
+  console.log("Hello");
+  var reservationDateElement = document.getElementById("id_reservation_date");
+  reservationDateElement.type = "date";
 </script>
 {% endblock %}
 
